# rust-embed

./: .gitignore  .pants-ignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  changelog.md  license  readme.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml  test.yml
examples/: actix.rs  assets.rs  axum.rs  basic.rs  http.rs  hyper.rs  poem.rs  rocket.rs  rouille.rs  salvo.rs  warp.rs
examples/axum-spa/: main.rs
examples/axum-spa/src/: main.rs
examples/public/: index.html  main.css  main.js
examples/public/images/: doc.txt
examples/public/symlinks/: main.js
impl/: Cargo.toml  readme.md
impl/src/: lib.rs  utils.rs
src/: lib.rs  main.rs  utils.rs
tests/: allow_missing.rs  custom_crate_path.rs  include_exclude.rs  interpolated_path.rs  lib.rs  metadata.rs  metadata_only.rs  mime_guess.rs  path_traversal_attack.rs  prefix.rs
utils/: Cargo.toml  license  readme.md
utils/src/: lib.rs
