[package]
name = "rust-embed"
version = "6.4.1"
description = "Rust Custom Derive Macro which loads files into the rust binary at compile time during release and loads the file from the fs during dev"
readme = "readme.md"
documentation = "https://docs.rs/rust-embed"
repository = "https://github.com/pyros2097/rust-embed"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming", "filesystem"]
authors = ["pyros2097 <pyros2097@gmail.com>"]
edition = "2018"

[[test]]
name = "interpolated_path"
path = "tests/interpolated_path.rs"
required-features = ["interpolate-folder-path"]

[[test]]
name = "include_exclude"
path = "tests/include_exclude.rs"
required-features = ["include-exclude"]

[dependencies]
walkdir = "2.3.1"
rust-embed-impl = { version = "6.3.0", path = "impl"}
rust-embed-utils = { version = "7.3.0", path = "utils"}

[dev-dependencies]
chrono = "0.4"

[features]
default = ["debug-embed"]
debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]
include-exclude = ["rust-embed-impl/include-exclude", "rust-embed-utils/include-exclude"]

[badges]
appveyor = { repository = "pyros2097/rust-embed" }
travis-ci = { repository = "pyros2097/rust-embed" }
is-it-maintained-issue-resolution = { repository = "pyros2097/rust-embed" }
is-it-maintained-open-issues = { repository = "pyros2097/rust-embed" }
maintenance = { status = "passively-maintained" }

[workspace]
members = ["impl", "utils"]
