[package]
name = "rust-embed-for-web"
version = "9.0.0"
description = "Rust Macro which embeds files into your executable. A fork of `rust-embed` with a focus on usage on web servers."
readme = "readme.md"
documentation = "https://docs.rs/rust-embed"
repository = "https://github.com/pyros2097/rust-embed"
license = "MIT"
keywords = ["http", "embed", "static", "web", "server"]
categories = ["web-programming", "filesystem"]
edition = "2018"

[[test]]
name = "interpolated_path"
path = "tests/interpolated_path.rs"
required-features = ["interpolate-folder-path"]

[[test]]
name = "include_exclude"
path = "tests/include_exclude.rs"
required-features = ["include-exclude"]

[dependencies]
walkdir = "2.3.1"
rust-embed-for-web-impl = { version = "9.0.0", path = "impl"}
rust-embed-for-web-utils = { version = "10.0.0", path = "utils"}

[dev-dependencies]
chrono = "0.4"
flate2 = "1.0"

[features]
default = []
interpolate-folder-path = ["rust-embed-for-web-impl/interpolate-folder-path"]
include-exclude = ["rust-embed-for-web-impl/include-exclude", "rust-embed-for-web-utils/include-exclude"]

[workspace]
members = ["impl", "utils"]
