[package]
name = "rust-embed"
version = "8.6.0"
description = "Rust Custom Derive Macro which loads files into the rust binary at compile time during release and loads the file from the fs during dev"
readme = "readme.md"
documentation = "https://docs.rs/rust-embed"
repository = "https://github.com/pyros2097/rust-embed"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming", "filesystem"]
authors = ["pyros2097 <pyros2097@gmail.com>"]
edition = "2018"
rust-version = "1.70.0"

[[example]]
name = "warp"
path = "examples/warp.rs"
required-features = ["warp-ex"]

[[example]]
name = "actix"
path = "examples/actix.rs"
required-features = ["actix"]

[[example]]
name = "rocket"
path = "examples/rocket.rs"
required-features = ["rocket"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum-ex"]

[[example]]
name = "axum-spa"
path = "examples/axum-spa/main.rs"
required-features = ["axum-ex"]

[[example]]
name = "poem"
path = "examples/poem.rs"
required-features = ["poem-ex"]

[[example]]
name = "salvo"
path = "examples/salvo.rs"
required-features = ["salvo-ex"]

[[test]]
name = "interpolated_path"
path = "tests/interpolated_path.rs"
required-features = ["interpolate-folder-path"]

[[test]]
name = "include_exclude"
path = "tests/include_exclude.rs"
required-features = ["include-exclude"]

[[test]]
name = "mime_guess"
path = "tests/mime_guess.rs"
required-features = ["mime-guess"]

[dependencies]
walkdir = "2.3.2"
rust-embed-impl = { version = "8.6.0", path = "impl"}
rust-embed-utils = { version = "8.6.0", path = "utils"}

include-flate = { version = "0.3", optional = true }
actix-web = { version = "4", optional = true }
mime_guess = { version = "2.0.5", optional = true }
hex = { version = "0.4.3", optional = true }
tokio = { version = "1.0", optional = true, features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false, optional = true }
rocket = { version = "0.5.0-rc.2", default-features = false, optional = true }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"], optional = true  }
poem = { version = "1.3.30", default-features = false, features = ["server"], optional = true  }
salvo = { version = "0.16", default-features = false, optional = true  }

[dev-dependencies]
sha2 = "0.10"

[features]
debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]
compression = ["rust-embed-impl/compression", "include-flate"]
mime-guess = ["rust-embed-impl/mime-guess", "rust-embed-utils/mime-guess"]
include-exclude = ["rust-embed-impl/include-exclude", "rust-embed-utils/include-exclude"]
actix = ["actix-web", "mime_guess"]
warp-ex = ["warp", "tokio", "mime_guess"]
axum-ex = ["axum", "tokio", "mime_guess"]
poem-ex = ["poem", "tokio", "mime_guess", "hex"]
salvo-ex = ["salvo", "tokio", "mime_guess", "hex"]


[badges]
appveyor = { repository = "pyros2097/rust-embed" }
travis-ci = { repository = "pyros2097/rust-embed" }
is-it-maintained-issue-resolution = { repository = "pyros2097/rust-embed" }
is-it-maintained-open-issues = { repository = "pyros2097/rust-embed" }
maintenance = { status = "passively-maintained" }

[workspace]
members = ["impl", "utils"]
