[package]
name = "rust-embed-impl"
version = "5.3.0"
description = "Rust Custom Derive Macro which loads files into the rust binary at compile time during release and loads the file from the fs during dev"
readme = "readme.md"
documentation = "https://docs.rs/rust-embed"
repository = "https://github.com/pyros2097/rust-embed"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming::http-server"]
authors = ["pyros2097 <pyros2097@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rust-embed-utils = { version = "5.0.0", path = "../utils"}

syn = "1"
quote = "1"
walkdir = "2.2.7"

[dependencies.shellexpand]
version = "2"
optional = true

[features]
debug-embed = []
interpolate-folder-path = ["shellexpand"]
compression = []
