[package]
name = "rust-embed-for-web-impl"
description = "The proc-macro implementation of rust-embed-for-web."
version = "9.0.0"
readme = "readme.md"
repository = "https://github.com/SeriousBug/rust-embed-for-web"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming::http-server"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rust-embed-for-web-utils = { version = "10.0.0", path = "../utils"}

syn = { version = "1", default-features = false, features = ["derive", "parsing", "proc-macro"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.3.1"

[dependencies.shellexpand]
version = "2"
optional = true

[features]
interpolate-folder-path = ["shellexpand"]
include-exclude = ["rust-embed-for-web-utils/include-exclude"]
