[package]
name = "rust-embed-impl"
version = "8.7.0"
description = "Rust Custom Derive Macro which loads files into the rust binary at compile time during release and loads the file from the fs during dev"
readme = "readme.md"
documentation = "https://docs.rs/rust-embed"
repository = "https://github.com/pyros2097/rust-embed"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming::http-server"]
authors = ["pyros2097 <pyros2097@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rust-embed-utils = { version = "8.7.0", path = "../utils"}

syn = { version = "2", default-features = false, features = ["derive", "parsing", "proc-macro", "printing"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.3.1"

[dependencies.shellexpand]
version = "3"
optional = true

[features]
debug-embed = []
interpolate-folder-path = ["shellexpand"]
compression = []
mime-guess = ["rust-embed-utils/mime-guess"]
include-exclude = ["rust-embed-utils/include-exclude"]
deterministic-timestamps = []
