[package]
name = "rust-embed-utils"
version = "7.3.0"
description = "Utilities for rust-embed"
readme = "readme.md"
documentation = "https://docs.rs/rust-embed"
repository = "https://github.com/pyros2097/rust-embed"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming::http-server"]
authors = ["pyros2097 <pyros2097@gmail.com>"]
edition = "2018"

[dependencies]
walkdir = "2.3.1"
sha2 = "0.10.5"
base85 = "1.1"
# Compute last-modified timestamps
chrono = "0.4"
# Compute the mime types
new_mime_guess = "4.0.1"
# Compression
flate2 = "1.0"

[dependencies.globset]
version = "0.4.8"
optional = true

[features]
debug-embed = []
include-exclude = ["globset"]
