[package]
name = "rust-embed-for-web-utils"
version = "10.0.0"
description = "Utilities for rust-embed-for-web"
readme = "readme.md"
repository = "https://github.com/SeriousBug/rust-embed-for-web"
license = "MIT"
keywords = ["http", "rocket", "static", "web", "server"]
categories = ["web-programming::http-server"]
edition = "2018"

[dependencies]
walkdir = "2.3.1"
sha2 = "0.10.5"
base85 = "1.1"
# Compute last-modified timestamps
chrono = "0.4"
# Compute the mime types
new_mime_guess = "4.0.1"
# Compression
flate2 = "1.0"

[dependencies.globset]
version = "0.4.8"
optional = true

[features]
include-exclude = ["globset"]
